# finite-element

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html
crates/fem-core/: Cargo.toml
crates/fem-core/src/: fem.rs  lib.rs  mesh.rs  simulation_tests.rs  softbody.rs  world.rs  xpbd.rs
crates/fem-engine/: Cargo.toml
crates/fem-engine/src/: lib.rs
crates/fem-engine/src/render/: color.rs  material.rs  mesh.rs  mod.rs  sprite.rs  texture.rs  traits.rs
crates/fem-game/: Cargo.toml  Trunk.toml  index.html  style.css
crates/fem-game/src/: lib.rs  renderer.rs
crates/fem-web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/fem-web/src/: lib.rs  profiler.rs  renderer.rs  trace.rs
docs/: fem-model.md  fem_trace (2).csv  fem_trace.csv
src/: fem.rs  lib.rs  math.rs  mesh.rs  renderer.rs  softbody.rs
