[package]
name = "fem-core"
version = "0.1.0"
edition = "2021"
description = "Portable FEM soft body physics library"

[lib]
crate-type = ["rlib"]

[features]
default = []
simd = ["wide"]  # Portable SIMD (x86/ARM/WASM)

[dependencies]
wide = { version = "0.7", optional = true }

[dev-dependencies]
# For testing only
