[package]
name = "fem-game"
version = "0.1.0"
edition = "2021"
description = "WebGL game using FEM soft body physics"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fem-core = { path = "../fem-core", features = ["simd"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlElement",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
    "KeyboardEvent",
    "MouseEvent",
    "Performance",
]

